--- a/lift.maintenance.android/res/values/strings.xml
+++ b/lift.maintenance.android/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="O">Others</string>
     <string name="labLast">Last Maintenance</string>
     <string name="labNext">Next Maintenance</string>
+    <string name="enddemo">End Sync</string>
 </resources>
