--- a/lift.maintenance.android/res/values-fr/strings.xml
+++ b/lift.maintenance.android/res/values-fr/strings.xml
@@ -75,4 +75,5 @@
     <string name="O">Autres</string>
     <string name="labLast">Dérniére Visite</string>
     <string name="labNext">Prochaine Visite</string>
+    <string name="enddemo">Synchro términée</string>
 </resources>
